# project_computational_biology_initial_conditions_pymyboss

./: .gitignore  .gitmodules  README.md  README_depracated.md  pyproject.toml
docs/: conf.py  tmp_parameters_to_set.md
docs/explanations /io_formats/: README.md  maboss_configuration_format.md  physicell_configuration_format.md
docs/explanations /methodology/: README.md
docs/explanations /modules/: README.md  _docs_template.md  _sketch_readme.md  configuration_module.md  wrappers_module.md
docs/how_to/: base_model-reproduction.md
docs/modules/: wrappers.md
notebooks/: CellFate.ipynb  library_test.ipynb  presentation.ipynb  pymyboss.ipynb  tutorial_1.ipynb  tutorial_2.ipynb
notebooks/development/: io_mdata_experimental.ipynb  omnipath_experimental.ipynb  physiboss_learning.ipynb  pipeline_experimental.ipynb  signaling_pathways_experimental.ipynb  signalling_pathways_experimental.ipynb  spatial_experimental.ipynb
notebooks/initial_tests/: check_library.ipynb
resources/docs/: _tmp_presentation.md  tmp_parameters_to_set.md
resources/docs/explanations/modules/: README.md  io_module.md  wrappers_module.md
resources/notebooks/: library_test.ipynb
resources/notebooks/depracated/: p53.ipynb
resources/notebooks/development/: io_mdata_experimental.ipynb  pipeline_experimental.ipynb  signaling_pathways_experimental.ipynb
resources/notebooks/liana_tutorials/: tutorial_1.ipynb  tutorial_3.ipynb
resources/scripts/download/: download_CellFate_data.sh  download_Cp53_model.sh
resources/scripts/utils/: install_OmniPhysiBoSS.py
scripts/download/: download_CellCycle_model.sh  download_CellFate_model.sh  download_DrosophilaPatterning_model.sh  download_cellfate.sh
settings/: sc_env.yml
src/MaBossSpatial/: __init__.py  main.py  wrapper.py
src/MaBossSpatial.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/MaBossSpatial/maboss_module/: model_manager.py
src/MaBossSpatial/simulation/: runner.py  time_lag.py
src/MaBossSpatial/spatial_module/: base.py  environment.py
src/MaBossSpatial/utils/: utils_check_configuration.py
src/OmniPhysiBoSS/configurators/: __init__.py  maboss.py  physicell.py
src/OmniPhysiBoSS/generators/: __init__.py  maboss.py  physicell.py
src/OmniPhysiBoSS/io/: anndata_io.py
src/OmniPhysiBoSS/io/mdata/: __init__.py  mdata_dataset.py  (+1 more)
src/OmniPhysiBoSS/models/: base.py
src/OmniPhysiBoSS/utils/: logger.py
src/OmniPhysiBoSS/wrappers/: __init__.py  configure_PhysiBoSS.py  run_PhysiBoSS.py  stage_PhysiBoSS.py
src/library_code/: main.py
src/library_code/maboss_module/: model_manager.py
src/simulation/: time_lag_estimator.py
src/spatial_module/: environment.py
tests/: conftest.py  mock_data.py  test_generators_maboss.py  test_generators_physicell.py  test_io.py
tests/mock_data/: __init__.py  maboss_templates.py  omics_data.py  physicell_templates.py
tests/test_generators/: test_generators_maboss.py  test_generators_physicell.py
tests/test_wrappers/: test_configure_excepions.py  test_configure_pathways.py  test_run_PhysiBoSS.py  test_stage_PhysiBoSS_excepions.py  test_stage_PhysiBoSS_pathways.py
workflow/envs/: environment.yaml
(+24 files in other folders)
