[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OmniPhysiBoss"
version = "0.1.0"
description = "A pipeline for multi-scale spatial Boolean modeling personalization via OmniPath, Liana+, and decoupleR"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "anndata>=0.9.0",
    "scanpy>=1.9.0",
    "liana>=1.0.0",
    "decouple-py>=1.4.0",
    "omnipath>=1.0.6",
    "maboss>=0.8.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]