[build-system]
requires = ["setuptools>=61.0.0", "wheel"]  # Packaging infrastructure constraints
build-backend = "setuptools.build_meta"     # Standard metadata backend target

[project]
name = "OmniPhysiBoSS"                    
version = "0.1.0"                           
description = "A pipeline for multi-scale spatial Boolean modeling personalization via OmniPath, Liana+, and decoupleR"
readme = "README.md" 
requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
] # Specialized tool indexing fields

dependencies = [
    "ipykernel",        # Jupyter notebook computation backend
    "anndata>=0.9.0",   # Annotated multi-omics data structures
    "scanpy>=1.9.0",    # Single-cell analysis library integrations
    "liana>=1.0.0",     # Intercellular communication scoring protocols
    "decoupler>=1.6.0", # Footprint pathway and transcription factor scoring algorithms
    "omnipath>=1.0.6",  # Biological database prioritization query engine
    #TODO - here we need to include version
    "pcdl"              # PhysiCell Data Loader library for trajectory extraction
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "sphinx",
    "myst-parser",
    "sphinx-rtd-theme",
] # Local source engineering checking dependencies

[tool.setuptools.packages.find]
where = ["src"] # Point packager mapping code to source container

[tool.pytest.ini_options]
norecursedirs = ["external", ".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg"] # Block testing sweeps from traversing compiled engine binaries